ingress-https/ingress-tls-app-tea.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tls-app-tea
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - tlstea.clederson.com
    secretName: tlstea-secret
  rules:
  - host: tlstea.clederson.com
    http:
      paths:
        - backend:
            service:
              name: apptea
              port:
                number: 80
          path: /
          pathType: Prefix
