ingress-https/ingress-tls-hello-world.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tls-app-hello
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - tlshello.clederson.com
    secretName: tlshello-secret
  rules:
  - host: tlshello.clederson.com
    http:
      paths:
        - backend:
            service:
               name: hello-world
               port:
                 number: 80
          path: /
          pathType: Prefix
